# OTSH

./: .clangd  .gitignore  CMakeLists.txt  README.md  系统实现.md  设计文档.md
backend-cpp/: CMakeLists.txt  README.md
backend-cpp/include/: config.h  db.h  hash.h  ht.h  http_server.h  metrics.h  resize.h  storage.h
backend-cpp/include/otsh/: cubby.h  facility.h  kkick_tree.h  mini_array.h  rebuild.h  resize.h  router.h
backend-cpp/scripts/: run-backend.ps1
backend-cpp/src/: db.cpp  hash.cpp  ht.cpp  http_server.cpp  main.cpp  metrics.cpp  resize.cpp  router.cpp  storage_mysql.cpp
frontend-vue/: package-lock.json  package.json  vite.config.ts
frontend-vue/src/: App.vue  style.css
frontend-vue/src/components/app/: AppHeader.vue  BusyOverlay.vue  ChartsPanel.vue  SidebarPanel.vue  StructureCard.vue
frontend-vue/src/styles/: app.css
include/: config.h  ht.h  http_server.h  metrics.h  storage.h
include/otsh/: cubby.h  facility.h  free_slot_tree.h  kkick_tree.h  meta_entry.h  mini_array.h  rebuild.h  router.h
perf/: bench.cpp  run_all.ps1  run_all.sh
perf/results/: bench_20260506_184522.json  bench_20260506_184551.json  bench_20260506_190548.json
scripts/: create_db.sql
src/: free_slot_tree.cpp  hash.cpp  ht.cpp  http_server.cpp  main.cpp  meta_entry.cpp  storage_mysql.cpp  test_runner.cpp
论文/: njuthesis-graduate.def  njuthesis-postdoctoral.def  njuthesis-sample.bbl  njuthesis-sample.bib  njuthesis-sample.tex  njuthesis-setup.def  njuthesis-undergraduate.def  njuthesis.cls
论文/chapters/: 01_introduction.aux  01_introduction.tex  02_background.aux  02_background.tex  03_design.aux  03_design.tex  03_system.aux  03_system.tex  04_experiments.aux  04_experiments.tex  04_implementation.aux  04_implementation.tex  05_conclusion.aux  05_conclusion.tex  05_experiments.aux  05_experiments.tex  06_conclusion.aux  06_conclusion.tex  appendix_api.aux  appendix_api.tex
